[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_locks"
version = "0.1.0"
description = "Python wrappers for py_rlock and py_rwlock - C-based locking primitives"
authors = [
    {name = "Neil Schemenauer", email = "nas@arctrix.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_locks", "py_locks.*"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.5",
    "setuptools>=80.9.0",
]
